Release Notes for the evrClient and event package
--------------------------------------------------
R1.5.0  2020-02-26 Kukhee Kim (KHKIM)
        * force tag R1.5.0
        * fix a typo in bsaATTREdef.substitutions

R1.5.0: 2020-02-13 Kukhee Kim (KHKIM)
        * force tag R1.5.0
        * update the order of system EDEFs for invairiant name (1H, TH, BR)

R1.5.0: 2020-02-07 Kukhee Kim (KHKIM)
        * redefine system EDEFs (CUH and CUS)
        * default SINK_SIZE (10 for user EDEFs an 1 for system EDEFs)
        * drop pulse id history buffer (comprees records) in BSA
        * build with:
          buildroot-2019.08
          evrmaDriver R1.0.9 (kernel module)
          evrma       R1.0.9 (api)
          BsaCore     R1.5.3 (epics module)


R1.4.7: 2019-09-11 Kukhee Kim (KHKIM)
        * build against BsaCore R1.5.2

R1.4.6: 2018-11-02 Kukhee Kim (KHKIM)
        * build against BsaCore R1.5.1
        * make all template have SINK_SIZE=10 as a default

R1.4.5: 2018-10-15 Kukhee Kim (KHKIM)
        * build against BsaCore R1.5.0

R1.4.4: 2018-08-18 Kukhee Kim (KHKIM)
        * bsaRecord.c, bsaRecord.dbd: send monitors on NORD change
        * add epicsTimeERROR macro in evrTime.c due to it is removed from epics 7
        * SINK_SIZE=10 as a default
        * add bsa test template: bsaPulseId.db

R1.4.3:  2018-06-28 Kukhee Kim (KHKIM)
        * build against BsaCore R1.4.1
        * apply Till's change on devBsaCore.c

              devBsaCore: defer activation of BSA sink until
              iocInit is in the initHookAfterIocRunning state.

              The sink does process the BSA record which is
              not 'legal' until the IOC is fully initialized.
              This fix mitigates a scenario where triggers
              are enabled prematurely (it is recommended to
              enable triggers only after IOC initialization).

              make automatic registration of timing callback optional
              ...depending on an environment variable.


