@@ -1,5 +1,10 @@
 Release Notes for the evrClient and event package
 --------------------------------------------------
+R1.5.0  2020-03 04 Kukhee Kim (KHKIM)
+        * force tag R1.5.0
+        * update evrPattern.h to update definition for modfier bits
+
+
 R1.5.0  2020-02-26 Kukhee Kim (KHKIM)
         * force tag R1.5.0
         * fix a typo in bsaATTREdef.substitutions
